<resources>
    <string name="app_name">pr6</string>
    <string name="theme1_title">Приключенческая Экспедиция</string>
    <string name="theme1_description">Погрузитесь в захватывающие приключения, исследуя неизведанные территории и разгадывая загадки.</string>

    <string name="theme2_title">Уютный Вечер дома</string>
    <string name="theme2_description">Настройтесь на уют и спокойствие, наслаждаясь теплым камином, чашкой горячего чая и приятной компанией.</string>

    <string name="theme3_title">Городская Ночь</string>
    <string name="theme3_description">Ощутите атмосферу городской жизни, окунитесь в огни ночного города и откройте для себя его скрытые уголки и секреты.</string>
    <string name="butexp">Погрузиться в приключения</string>
    <string name="buthome">Насладиться уютом вечера</string>
    <string name="butnight">Выйти на улицу и насладиться ночью</string>
</resources>