<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cardexpedition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme1_title"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="217dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/expedition" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme1_description"
        android:gravity="center"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/butexp" />
</LinearLayout>