<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cardnight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme3_title"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="340dp"
        android:layout_height="373dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/rayan" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="350dp"
        android:layout_height="86dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/theme3_description"
        android:textSize="17dp"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/butnight" />
</LinearLayout>